# wttf

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  cmake.yml
cmake/: gh-presets.json  wttfConfig.cmake.in
examples/: CMakeLists.txt  pngsaver.cpp  pngsaver.hpp  rasterize-text.cpp  ttfparse.cpp  txt2png.cpp
include/: CMakeLists.txt
include/ttf/: assert.hpp  metrics.hpp  rasterizer.hpp  shape.hpp  transform.hpp  typeface.hpp
include/wttf/: CMakeLists.txt  metrics.hpp  rasterizer.hpp  shape.hpp  transform.hpp  typeface.hpp
src/: CMakeLists.txt  font_data.hpp  rasterizer.cpp  shape.cpp  ttfparse.cpp  typeface.cpp  typeface_p.hpp
